# smap_analysis

./: .gitignore  README.md  env.yml  pyproject.toml
.github/workflows/: workflow.yml
notebooks/: kerchunk_test.ipynb  process_smap.ipynb
scripts/: download_smap.py
src/smap_analysis/: __init__.py  utils.py
